--- a/views/shop.pug
+++ b/views/shop.pug
@@ -15,7 +15,7 @@ html(lang="en")
                     li.main-header__item 
                         a(href="/admin/add-product") Add Product
         main
-            if prods.length > 0
+            if prods && prods.length > 0
                 .grid
                     each product in prods
                         article.card.product-item
